test_regress/t/t_castdyn_unsup_bad.out
%Error-UNSUPPORTED: t/t_castdyn_unsup_bad.v:13:7: Unsupported: $cast to 'string[$]' from 'int[string]'
                                                : ... In instance t
                                                : ... Suggest try static cast
   13 |       $cast(q, aarray);
      |       ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
