test_regress/t/t_castdyn_unsup_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain.
// SPDX-FileCopyrightText: 2020 Wilson Snyder
// SPDX-License-Identifier: CC0-1.0

module t;

   string q[$];
   int aarray[string];

   initial begin
      $cast(q, aarray);
   end

endmodule
